src/objects/Invoice_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legacy_ID__c</fullName>
        <formula>Subscriber__r.Account_Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legacy ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Subscriber__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Approval_Code__c</fullName>
        <label>Bank Approval Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Transaction_Date__c</fullName>
        <label>Bank Transaction Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copies__c</fullName>
        <label>Copies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <label>Created By Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <label>Delivery Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By_Id__c</fullName>
        <label>Legacy Created By Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By_Id__c</fullName>
        <label>Legacy Update By Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <label>Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <label>Processed Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pub_Code__c</fullName>
        <label>Pub Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Mode__c</fullName>
        <label>Recurring Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Histories</relationshipLabel>
        <relationshipName>Invoice_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_By_Id__c</fullName>
        <label>Update By Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <label>Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Invoice History</label>
    <nameField>
        <label>Invoice History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>